--- a/Solid-Angular/src/app/card/card.component.html
+++ b/Solid-Angular/src/app/card/card.component.html
@@ -8,7 +8,7 @@
       </div>
       Menu Item 1
     </div>
-    <div class="menu-item">
+    <div class="menu-item" (click)="moveChat()">
       <div>
         <i class="far fa-comment"></i>
       </div>
