--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1,6 +1,6 @@
 body {
-  background-image: url("../img/bg-repeat.png");
-  background-repeat: repeat;
+  background-image: url("../img/bg.png");
+  background-repeat: initial;
   background-color: ghostwhite;
   color: white;
 }
@@ -11,7 +11,7 @@ a {
 }
 
 .container {
-  background-color: darkcyan;
+  background-color: #326372;
   padding-bottom: 20px;
 }
 
@@ -40,8 +40,23 @@ a {
   padding-left: 5px;
 }
 
+#messages{
+    background-color: ghostwhite;
+    padding: 1em;
+}
+
 #chat-details {
   margin-top: 20px;
+    display: flex;
+}
+
+#write-chat{
+    margin-left:0.5em;
+    border-radius: 3em;
+}
+
+#stop-chatting{
+    margin-top: 10px;
 }
 
 .hidden {
