--- a/reports/junit-report.xml
+++ b/reports/junit-report.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
+    <testsuite name="start-a-chat;start-a-chat-with-a-real-friend" tests="2" failures="0" skipped="0">
+        <properties>
+            <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/createChat.feature">
+            </property>
+        </properties>
+        <testcase name="Given a &quot;test3b&quot; with a &quot;SolidTest3b$&quot; that wants to talk with a friend" classname="start-a-chat;start-a-chat-with-a-real-friend" time="9.587748237">
+        </testcase>
+        <testcase name="Then the chat is created" classname="start-a-chat;start-a-chat-with-a-real-friend" time="0.635323124">
+        </testcase>
+    </testsuite>
     <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
         <properties>
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/login.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login" classname="make-login-in-the-chat;do-login-in-chat" time="8.974976543">
+        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login" classname="make-login-in-the-chat;do-login-in-chat" time="8.008998522">
         </testcase>
-        <testcase name="Then the login is successfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.011252683">
-        </testcase>
-    </testsuite>
-    <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
-        <properties>
-            <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/loginFailure.feature">
-            </property>
-        </properties>
-        <testcase name="Given a &quot;userTest3&quot; and &quot;passwordInvalid&quot; and the user make bad login" classname="make-login-in-the-chat;do-login-in-chat" time="7.945948834">
-        </testcase>
-        <testcase name="Then the login is unsuccessfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.08489844">
+        <testcase name="Then the login is successfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.008795761">
         </testcase>
     </testsuite>
     <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
@@ -25,9 +25,19 @@
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/loginFailure.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;userInvalid&quot; and &quot;password&quot; and the user make bad login" classname="make-login-in-the-chat;do-login-in-chat" time="7.883665259">
+        <testcase name="Given a &quot;userTest3&quot; and &quot;passwordInvalid&quot; and the user make bad login" classname="make-login-in-the-chat;do-login-in-chat" time="7.099875209">
         </testcase>
-        <testcase name="Then the login is unsuccessfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.009666086">
+        <testcase name="Then the login is unsuccessfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.010889072">
+        </testcase>
+    </testsuite>
+    <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
+        <properties>
+            <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/loginFailure.feature">
+            </property>
+        </properties>
+        <testcase name="Given a &quot;userInvalid&quot; and &quot;password&quot; and the user make bad login" classname="make-login-in-the-chat;do-login-in-chat" time="7.098282193">
+        </testcase>
+        <testcase name="Then the login is unsuccessfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.04224457">
         </testcase>
     </testsuite>
     <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
@@ -35,9 +45,9 @@
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/logout.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login and log out" classname="make-login-in-the-chat;do-login-in-chat" time="8.653888806">
+        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login and log out" classname="make-login-in-the-chat;do-login-in-chat" time="9.47859283">
         </testcase>
-        <testcase name="Then the main window is shows" classname="make-login-in-the-chat;do-login-in-chat" time="0.84874086">
+        <testcase name="Then the main window is shows" classname="make-login-in-the-chat;do-login-in-chat" time="0.852970905">
         </testcase>
     </testsuite>
 </testsuites>
