--- a/reports/junit-report.xml
+++ b/reports/junit-report.xml
@@ -5,9 +5,9 @@
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/createChat.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;test3b&quot; with a &quot;SolidTest3b$&quot; that wants to talk with a friend" classname="start-a-chat;start-a-chat-with-a-real-friend" time="11.393333799">
+        <testcase name="Given a &quot;test3b&quot; with a &quot;SolidTest3b$&quot; that wants to talk with a friend" classname="start-a-chat;start-a-chat-with-a-real-friend" time="10.544655617">
         </testcase>
-        <testcase name="Then the chat is created" classname="start-a-chat;start-a-chat-with-a-real-friend" time="0.798438323">
+        <testcase name="Then the chat is created" classname="start-a-chat;start-a-chat-with-a-real-friend" time="0.519962922">
         </testcase>
     </testsuite>
     <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
@@ -15,39 +15,39 @@
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/login.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login" classname="make-login-in-the-chat;do-login-in-chat" time="11.075904827">
+        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login" classname="make-login-in-the-chat;do-login-in-chat" time="8.980698413">
         </testcase>
-        <testcase name="Then the login is successfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.042022931">
+        <testcase name="Then the login is successfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.007054355">
         </testcase>
     </testsuite>
-    <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
+    <testsuite name="make-bad-login-in-the-chat;do-bad-login-in-chat" tests="2" failures="0" skipped="0">
         <properties>
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/loginFailure.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;userTest3&quot; and &quot;passwordInvalid&quot; and the user make bad login" classname="make-login-in-the-chat;do-login-in-chat" time="10.393576207">
+        <testcase name="Given a &quot;userTest3&quot; and &quot;passwordInvalid&quot; and the user make bad login" classname="make-bad-login-in-the-chat;do-bad-login-in-chat" time="7.245546144">
         </testcase>
-        <testcase name="Then the login is unsuccessfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.011324423">
+        <testcase name="Then the login is unsuccessfull" classname="make-bad-login-in-the-chat;do-bad-login-in-chat" time="0.018902861">
         </testcase>
     </testsuite>
-    <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
+    <testsuite name="make-bad-login-in-the-chat;do-bad-login-in-chat" tests="2" failures="0" skipped="0">
         <properties>
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/loginFailure.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;userInvalid&quot; and &quot;password&quot; and the user make bad login" classname="make-login-in-the-chat;do-login-in-chat" time="9.794768986">
+        <testcase name="Given a &quot;userInvalid&quot; and &quot;password&quot; and the user make bad login" classname="make-bad-login-in-the-chat;do-bad-login-in-chat" time="7.422398133">
         </testcase>
-        <testcase name="Then the login is unsuccessfull" classname="make-login-in-the-chat;do-login-in-chat" time="0.017735757">
+        <testcase name="Then the login is unsuccessfull" classname="make-bad-login-in-the-chat;do-bad-login-in-chat" time="0.020582344">
         </testcase>
     </testsuite>
-    <testsuite name="make-login-in-the-chat;do-login-in-chat" tests="2" failures="0" skipped="0">
+    <testsuite name="make-logout-in-the-chat;do-logout-in-chat" tests="2" failures="0" skipped="0">
         <properties>
             <property name="URI" value="C:/Users/alba-/Desktop/Lunes 1/dechat_es3b/features/logout.feature">
             </property>
         </properties>
-        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login and log out" classname="make-login-in-the-chat;do-login-in-chat" time="12.227831154">
+        <testcase name="Given a &quot;test3b&quot; and &quot;SolidTest3b$&quot; and the user make login and log out" classname="make-logout-in-the-chat;do-logout-in-chat" time="8.10689898">
         </testcase>
-        <testcase name="Then the main window is shows" classname="make-login-in-the-chat;do-login-in-chat" time="0.509296245">
+        <testcase name="Then the main window is shows" classname="make-logout-in-the-chat;do-logout-in-chat" time="0.472628553">
         </testcase>
     </testsuite>
 </testsuites>
