--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -5,7 +5,7 @@
     min-height: 575px;
     min-width: 575px;
     padding:1em;
-    border: 1px solid #f26135 !important;
+    border: 1px solid #f26135;
     border-radius: 1em;
     overflow-y: auto;
 }
